--- a/blog-inner.css
+++ b/blog-inner.css
@@ -187,308 +187,16 @@ body {
   width: 100%;
   text-align: center;
   padding: 3rem 0;
+  width: 70%;
 }
-.title-container h1 {
-  font-size: 3.5rem;
+.title-container h3 {
+  font-size: 3rem;
+  text-align: center;
 }
 @media (max-width: 768px) {
-  .title-container h1 {
+  .title-container h3 {
     font-size: 2.5rem;
   }
-}
-
-.blog {
-  display: flex;
-  grid-auto-columns: 1fr;
-  grid-column-gap: 2rem;
-  grid-row-gap: 2rem;
-  grid-template-columns: 1fr 1fr;
-  padding-bottom: 3rem;
-}
-@media (max-width: 768px) {
-  .blog {
-    display: block;
-    overflow: hidden;
-  }
-}
-.blog .left {
-  position: relative;
-  display: flex;
-}
-.blog .left .text {
-  display: flex;
-  height: 100%;
-  align-items: end;
-  position: absolute;
-  color: white;
-  z-index: 2;
-  padding: 4rem;
-  height: 100%;
-  width: 100%;
-}
-@media (max-width: 768px) {
-  .blog .left .text {
-    padding: 2rem;
-    align-items: center;
-  }
-}
-.blog .left .text h1 {
-  width: 80%;
-  font-size: 3rem;
-  line-height: 1.2;
-  font-weight: 600;
-  padding-bottom: 2rem;
-}
-@media (max-width: 768px) {
-  .blog .left .text h1 {
-    font-size: 2rem;
-    width: 100%;
-  }
-}
-.blog .left .text .bottom {
-  display: flex;
-}
-@media (max-width: 768px) {
-  .blog .left .text .bottom {
-    display: block;
-    padding-top: 1rem;
-  }
-}
-.blog .left .text .bottom .left .user {
-  display: flex;
-  gap: 1rem;
-}
-.blog .left .text .bottom .left .user .avatar {
-  overflow: hidden;
-  width: 3rem;
-  height: 3rem;
-  border-radius: 1.5rem;
-}
-.blog .left .text .bottom .left .user .avatar img {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  -o-object-fit: cover;
-  object-fit: cover;
-}
-.blog .left .text .bottom .left .user .user-infor {
-  display: block;
-}
-.blog .left .text .bottom .left .user .user-infor h5 {
-  font-size: 1rem;
-}
-.blog .left .text .bottom .left .user .user-infor p {
-  color: #9d9999;
-}
-.blog .left .text .bottom .right {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-@media (max-width: 768px) {
-  .blog .left .text .bottom .right {
-    justify-content: start;
-  }
-}
-.blog .left .text .bottom .right .bi {
-  align-items: center;
-}
-.blog .left .text .bottom .right a {
-  text-decoration: none;
-  color: #9d9999;
-}
-.blog .left .text .bottom .right a:hover {
-  color: #ffc492;
-}
-.blog .left .trending {
-  position: absolute;
-  color: white;
-  background: #8f7058;
-  padding: 1rem 2rem;
-  letter-spacing: 0.25rem;
-  font-family: "Poppins";
-  font-weight: 600;
-  top: 0;
-  z-index: 2;
-}
-@media (max-width: 768px) {
-  .blog .left .trending {
-    padding: 0.5rem 1rem;
-  }
-}
-.blog .left .overlay {
-  position: absolute;
-  z-index: 1;
-  overflow: hidden;
-  -o-object-fit: cover;
-     object-fit: cover;
-  height: 100%;
-}
-.blog .left .overlay img {
-  -o-object-fit: cover;
-     object-fit: cover;
-  overflow: hidden;
-  height: 100%;
-}
-.blog .left .image {
-  position: relative;
-  overflow: hidden;
-}
-.blog .left .image img {
-  -o-object-fit: cover;
-     object-fit: cover;
-  height: 100%;
-}
-.blog .right {
-  display: grid;
-  grid-row-gap: 2rem;
-}
-@media (max-width: 768px) {
-  .blog .right {
-    padding-top: 2rem;
-    display: block;
-  }
-}
-.blog .right img {
-  width: 100%;
-  max-height: 10rem;
-  -o-object-fit: cover;
-     object-fit: cover;
-  height: 100%;
-}
-@media (max-width: 768px) {
-  .blog .right img {
-    width: 100%;
-    max-height: 10rem;
-    -o-object-fit: cover;
-       object-fit: cover;
-  }
-}
-.blog .right .blog-item {
-  display: flex;
-  gap: 1rem;
-}
-@media (max-width: 768px) {
-  .blog .right .blog-item {
-    display: block;
-    width: auto;
-    height: auto;
-    padding-top: 1rem;
-  }
-}
-.blog .right .blog-item .text {
-  color: white;
-  width: 60%;
-}
-@media (max-width: 768px) {
-  .blog .right .blog-item .text {
-    width: 100%;
-  }
-}
-.blog .right .blog-item .text h4 {
-  padding-bottom: 0.5rem;
-}
-@media (max-width: 768px) {
-  .blog .right .blog-item .text h4 {
-    padding-bottom: 0;
-    padding-top: 0.5rem;
-    font-size: 1rem;
-  }
-}
-.blog .right .blog-item .text p {
-  color: #9d9999;
-}
-@media (max-width: 768px) {
-  .blog .right .blog-item .text p {
-    font-size: 1rem;
-  }
-}
-
-.articles {
-  display: flex;
-  flex-wrap: wrap;
-}
-@media (max-width: 768px) {
-  .articles {
-    display: block;
-  }
-}
-.articles .article-item {
-  width: 50%;
-  display: flex;
-  color: white;
-  gap: 2rem;
-  padding-bottom: 2rem;
-}
-@media (max-width: 768px) {
-  .articles .article-item {
-    width: 100%;
-    display: block;
-    padding-bottom: 4rem;
-  }
-}
-.articles .article-item .left img {
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-@media (max-width: 768px) {
-  .articles .article-item .left img {
-    width: 100%;
-    height: 100%;
-    -o-object-fit: cover;
-       object-fit: cover;
-    max-height: 15rem;
-  }
-}
-.articles .article-item .right {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-@media screen {
-  .articles .article-item .right {
-    padding-top: 1rem;
-    display: block;
-  }
-}
-.articles .article-item .right .user {
-  padding-bottom: 1rem;
-  display: flex;
-  gap: 1rem;
-}
-.articles .article-item .right .user .avatar {
-  overflow: hidden;
-  width: 3rem;
-  height: 3rem;
-  border-radius: 1.5rem;
-}
-.articles .article-item .right .user .avatar img {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  -o-object-fit: cover;
-  object-fit: cover;
-}
-.articles .article-item .right .user .user-infor {
-  display: block;
-}
-.articles .article-item .right .user .user-infor h5 {
-  font-size: 1rem;
-}
-.articles .article-item .right .user .user-infor p {
-  color: #9d9999;
-  font-family: "Poppins";
-}
-.articles .article-item .right a {
-  padding-top: 1rem;
-  display: flex;
-  gap: 0.5rem;
-  align-items: center;
-  text-decoration: none;
-  color: #9d9999;
-}
-.articles .article-item .right a:hover {
-  color: #ffc492;
 }
 
 .map {
@@ -636,4 +344,4 @@ body {
     width: 100%;
     justify-content: center;
   }
-}/*# sourceMappingURL=blog.css.map */
+}/*# sourceMappingURL=blog-inner.css.map */
