--- a/blog-inner.scss
+++ b/blog-inner.scss
@@ -191,273 +191,12 @@ body {
   width: 100%;
   text-align: center;
   padding: 3rem 0;
-  h1 {
-    font-size: 3.5rem;
+  width: 70%;
+  h3 {
+    font-size: 3rem;
+    text-align: center;
     @media (max-width: 768px) {
       font-size: 2.5rem;
-    }
-  }
-}
-.blog {
-  display: flex;
-  grid-auto-columns: 1fr;
-  grid-column-gap: 2rem;
-  grid-row-gap: 2rem;
-  -ms-grid-columns: 1fr 1fr;
-  grid-template-columns: 1fr 1fr;
-  padding-bottom: 3rem;
-  @media (max-width: 768px) {
-    display: block;
-    overflow: hidden;
-  }
-  .left {
-    position: relative;
-    display: flex;
-    .text {
-      display: flex;
-      height: 100%;
-      align-items: end;
-      position: absolute;
-      color: white;
-      z-index: 2;
-      padding: 4rem;
-      height: 100%;
-      width: 100%;
-      @media (max-width: 768px) {
-        padding: 2rem;
-        align-items: center;
-      }
-      h1 {
-        width: 80%;
-        font-size: 3rem;
-        line-height: 1.2;
-        font-weight: 600;
-        padding-bottom: 2rem;
-        @media (max-width: 768px) {
-          font-size: 2rem;
-          width: 100%;
-        }
-      }
-      .bottom {
-        display: flex;
-        @media (max-width: 768px) {
-          display: block;
-          padding-top: 1rem;
-        }
-        .left {
-          .user {
-            display: flex;
-            gap: 1rem;
-            .avatar {
-              overflow: hidden;
-              width: 3rem;
-              height: 3rem;
-              border-radius: 1.5rem;
-              img {
-                width: 100%;
-                height: 100%;
-                border-radius: 50%;
-                -o-object-fit: cover;
-                object-fit: cover;
-              }
-            }
-            .user-infor {
-              display: block;
-              h5 {
-                font-size: 1rem;
-              }
-              p {
-                color: #9d9999;
-              }
-            }
-          }
-        }
-        .right {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          @media (max-width: 768px) {
-            justify-content: start;
-          }
-          .bi {
-            align-items: center;
-          }
-          a {
-            text-decoration: none;
-            color: #9d9999;
-          }
-          a:hover {
-            color: #ffc492;
-          }
-        }
-      }
-    }
-    .trending {
-      position: absolute;
-      color: white;
-      background: #8f7058;
-      padding: 1rem 2rem;
-      letter-spacing: 0.25rem;
-      font-family: "Poppins";
-      font-weight: 600;
-      top: 0;
-      z-index: 2;
-      @media (max-width: 768px) {
-        padding: 0.5rem 1rem;
-      }
-    }
-    .overlay {
-      position: absolute;
-      z-index: 1;
-      overflow: hidden;
-      object-fit: cover;
-      height: 100%;
-      img {
-        object-fit: cover;
-        overflow: hidden;
-        height: 100%;
-      }
-    }
-    .image {
-      position: relative;
-      overflow: hidden;
-
-      img {
-        object-fit: cover;
-        height: 100%;
-      }
-    }
-  }
-  .right {
-    display: grid;
-    grid-row-gap: 2rem;
-    @media (max-width: 768px) {
-      padding-top: 2rem;
-      display: block;
-    }
-    img {
-      width: 100%;
-      max-height: 10rem;
-      object-fit: cover;
-      height: 100%;
-
-      @media (max-width: 768px) {
-        width: 100%;
-        max-height: 10rem;
-        object-fit: cover;
-      }
-    }
-    .blog-item {
-      display: flex;
-      gap: 1rem;
-      @media (max-width: 768px) {
-        display: block;
-        width: auto;
-        height: auto;
-        padding-top: 1rem;
-      }
-      .text {
-        color: white;
-        width: 60%;
-        @media (max-width: 768px) {
-          width: 100%;
-        }
-        h4 {
-          padding-bottom: 0.5rem;
-          @media (max-width: 768px) {
-            padding-bottom: 0;
-            padding-top: 0.5rem;
-            font-size: 1rem;
-          }
-        }
-        p {
-          color: #9d9999;
-          @media (max-width: 768px) {
-            font-size: 1rem;
-          }
-        }
-      }
-    }
-  }
-}
-
-.articles {
-  display: flex;
-  flex-wrap: wrap;
-  @media (max-width: 768px) {
-    display: block;
-  }
-  .article-item {
-    width: 50%;
-    display: flex;
-    color: white;
-    gap: 2rem;
-    padding-bottom: 2rem;
-    @media (max-width: 768px) {
-      width: 100%;
-      display: block;
-      padding-bottom: 4rem;
-    }
-    .left {
-      img {
-        object-fit: cover;
-        @media (max-width: 768px) {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-          max-height: 15rem;
-        }
-      }
-    }
-    .right {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      @media screen {
-        padding-top: 1rem;
-        display: block;
-      }
-      .user {
-        padding-bottom: 1rem;
-        display: flex;
-        gap: 1rem;
-        .avatar {
-          overflow: hidden;
-          width: 3rem;
-          height: 3rem;
-          border-radius: 1.5rem;
-          img {
-            width: 100%;
-            height: 100%;
-            border-radius: 50%;
-            -o-object-fit: cover;
-            object-fit: cover;
-          }
-        }
-        .user-infor {
-          display: block;
-          h5 {
-            font-size: 1rem;
-          }
-          p {
-            color: #9d9999;
-            font-family: "Poppins";
-          }
-        }
-      }
-      h5 {
-      }
-      a {
-        padding-top: 1rem;
-        display: flex;
-        gap: 0.5rem;
-        align-items: center;
-        text-decoration: none;
-        color: #9d9999;
-      }
-      a:hover {
-        color: #ffc492;
-      }
     }
   }
 }
