--- a/blog-inner.css
+++ b/blog-inner.css
@@ -182,12 +182,66 @@ body {
   display: none;
 }
 
+.user {
+  padding-top: 5rem;
+  padding-bottom: 1rem;
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+}
+.user .avatar {
+  overflow: hidden;
+  width: 3rem;
+  height: 3rem;
+  border-radius: 1.5rem;
+}
+.user .avatar img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+.user .user-infor {
+  align-items: center;
+  display: flex;
+  gap: 1rem;
+}
+@media (max-width: 768px) {
+  .user .user-infor {
+    display: block;
+  }
+}
+.user .user-infor h5 {
+  font-size: 1rem;
+  color: white;
+  margin: 0;
+}
+.user .user-infor p {
+  color: #9d9999;
+  font-family: "Poppins";
+  margin: 0;
+}
+
+.line-top {
+  width: 70%;
+  height: 1px;
+  margin-top: 1.5rem;
+  margin-bottom: 1rem;
+  background-color: hsla(0, 0%, 100%, 0.05);
+}
+
 .title-container {
   color: white;
-  width: 100%;
   text-align: center;
   padding: 3rem 0;
   width: 70%;
+}
+@media (max-width: 768px) {
+  .title-container {
+    width: 100%;
+  }
 }
 .title-container h3 {
   font-size: 3rem;
@@ -195,8 +249,40 @@ body {
 }
 @media (max-width: 768px) {
   .title-container h3 {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
+}
+
+.inner-blog {
+  color: white;
+}
+.inner-blog img {
+  max-height: 32rem;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+@media (max-width: 768px) {
+  .inner-blog img {
+    max-height: 20rem;
+  }
+}
+.inner-blog .wrap {
+  display: flex;
+  justify-content: center;
+  padding-top: 2rem;
+}
+.inner-blog .wrap .text {
+  width: 70%;
+}
+@media (max-width: 768px) {
+  .inner-blog .wrap .text {
+    width: 100%;
+  }
+}
+.inner-blog .wrap .text p {
+  color: #9d9999;
+  font-family: "Poppins";
 }
 
 .map {
