--- a/blog-inner.scss
+++ b/blog-inner.scss
@@ -186,21 +186,95 @@ body {
     display: none;
   }
 }
+.user {
+  padding-top: 5rem;
+  padding-bottom: 1rem;
+  display: flex;
+  gap: 1rem;
+  justify-content: center;
+  align-items: center;
+
+  .avatar {
+    overflow: hidden;
+    width: 3rem;
+    height: 3rem;
+    border-radius: 1.5rem;
+    img {
+      width: 100%;
+      height: 100%;
+      border-radius: 50%;
+      -o-object-fit: cover;
+      object-fit: cover;
+    }
+  }
+  .user-infor {
+    align-items: center;
+    display: flex;
+    gap: 1rem;
+    @media (max-width:768px) {
+        display: block;
+    }
+    h5 {
+      font-size: 1rem;
+      color: white;
+      margin: 0;
+    }
+    p {
+      color: #9d9999;
+      font-family: "Poppins";
+      margin: 0;
+    }
+  }
+}
+.line-top{
+    width: 70%;
+    height: 1px;
+    margin-top: 1.5rem;
+    margin-bottom: 1rem;
+    background-color: hsla(0, 0%, 100%, 0.05);
+}
 .title-container {
   color: white;
-  width: 100%;
   text-align: center;
   padding: 3rem 0;
   width: 70%;
+  @media (max-width:768px) {
+    width: 100%;
+  }
   h3 {
     font-size: 3rem;
     text-align: center;
     @media (max-width: 768px) {
-      font-size: 2.5rem;
+      font-size: 2rem;
     }
   }
 }
-
+.inner-blog{
+    color: white;
+    img{
+        max-height: 32rem;
+        width: 100%;
+        object-fit: cover;
+        @media (max-width:768px) {
+            max-height: 20rem;
+        }
+    }
+    .wrap{
+        display: flex;
+        justify-content: center;
+        padding-top: 2rem;
+        .text{
+            width: 70%;
+            @media (max-width:768px) {
+                width: 100%;
+            }
+            p{
+                color: #9d9999;
+                font-family: 'Poppins';
+            }
+        }
+    }
+}
 .map {
   margin-top: 5rem;
   color: white;
