--- a/contact.scss
+++ b/contact.scss
@@ -198,6 +198,9 @@ body {
     width: 100%;
     h2 {
       width: 60%;
+      @media (max-width:768px) {
+        width: 100%;
+      }
     }
     p {
       color: #9d9999;
