--- a/contact.css
+++ b/contact.css
@@ -198,6 +198,11 @@ body {
 .contact .left h2 {
   width: 60%;
 }
+@media (max-width: 768px) {
+  .contact .left h2 {
+    width: 100%;
+  }
+}
 .contact .left p {
   color: #9d9999;
   font-family: "Poppins";
