--- a/style.css
+++ b/style.css
@@ -754,12 +754,24 @@ body {
   align-items: center;
   justify-content: center;
 }
+.quote .container .right iframe {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  max-height: 32rem;
+  transition: transform 0.5s;
+  transform-origin: center center;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
 @media (max-width: 768px) {
   .quote .container .right {
     width: 100%;
   }
 }
 .quote .container .right img {
+  position: absolute;
+  display: block;
   overflow: hidden;
   width: 100%;
   height: 100%;
@@ -768,6 +780,9 @@ body {
   transform-origin: center center;
   -o-object-fit: cover;
      object-fit: cover;
+}
+.quote .container .right .bg {
+  z-index: -2;
 }
 .quote .container .right img:hover {
   transform: scale(1.1);
