--- a/style.scss
+++ b/style.scss
@@ -713,10 +713,23 @@ body {
       position: relative;
       align-items: center;
       justify-content: center;
+      iframe{
+        overflow: hidden;
+        width: 100%;
+        height: 100%;
+        max-height: 32rem;
+        transition: transform 0.5s;
+        transform-origin: center center;
+        -o-object-fit: cover;
+        object-fit: cover;
+      }
       @media (max-width: 768px) {
         width: 100%;
       }
       img {
+        position: absolute;
+
+        display: block;
         overflow: hidden;
         width: 100%;
         height: 100%;
@@ -724,6 +737,9 @@ body {
         transition: transform 0.5s;
         transform-origin: center center;
         object-fit: cover;
+      }
+      .bg{
+        z-index: -2;  
       }
       img:hover {
         transform: scale(1.1);
