--- a/know-more.scss
+++ b/know-more.scss
@@ -11,7 +11,7 @@ body {
   top: 0;
   left: 0;
   z-index: 999;
-  font-family: 'Poppins';
+  font-family: "Poppins";
   @media (max-width: 768px) {
     position: relative;
   }
@@ -304,8 +304,24 @@ body {
     .image {
       position: relative;
       img {
-        object-fit: auto, cover;
+        object-fit: cover;
         width: 100%;
+        overflow: hidden;
+        width: 100%;
+        height: 28rem;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        -webkit-box-pack: center;
+        -webkit-justify-content: center;
+        -ms-flex-pack: center;
+        justify-content: center;
+        -webkit-box-align: start;
+        -webkit-align-items: flex-start;
+        -ms-flex-align: start;
+        align-items: flex-start;
         @media (max-width: 768px) {
           height: 28rem;
           object-fit: cover;
@@ -414,34 +430,33 @@ body {
   display: flex;
   color: white;
   gap: 2rem;
-  @media (max-width:768px) {
+  @media (max-width: 768px) {
     display: block;
   }
   .left {
     width: 50%;
-    @media (max-width:768px) {
+    @media (max-width: 768px) {
       width: 100%;
-
     }
     h1 {
       font-size: 3rem;
       line-height: 1.2;
       font-weight: 600;
-      @media (max-width:768px) {
+      @media (max-width: 768px) {
         font-size: 2rem;
       }
     }
   }
   .right {
     width: 50%;
-    @media (max-width:768px) {
+    @media (max-width: 768px) {
       width: 100%;
       padding-top: 2rem;
     }
-    p{
+    p {
       padding-top: 2rem;
       color: #9d9999;
-      font-family: 'Poppins';
+      font-family: "Poppins";
     }
   }
 }
